# slipway

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml
.cargo/: audit.toml
crates/slipway/: Cargo.toml
crates/slipway-backend-egui/: Cargo.toml
crates/slipway-backend-egui/src/: lib.rs  native_runner.rs
crates/slipway-backend-iced/: Cargo.toml
crates/slipway-backend-iced/src/: lib.rs  native_runner.rs
crates/slipway-backend-iced/tests/: step223_live.rs
crates/slipway-core/: Cargo.toml
crates/slipway-core/src/: lib.rs
crates/slipway-core/tests/: box_spacing.rs  builder_structure.rs  compile_fail.rs  diagnostics_catalog.rs  docs_canonical_rules.rs
crates/slipway-core/tests/compile_fail/: parent_local_explicit_border.rs  parent_local_explicit_border.stderr  parent_local_requested_outer.rs  parent_local_requested_outer.stderr  scrollable_bundle_partial_widget.rs  scrollable_bundle_partial_widget.stderr  text_geometry_raw_vec_bypass.rs  text_geometry_raw_vec_bypass.stderr  text_selection_private_bypass.rs  text_selection_private_bypass.stderr
crates/slipway-debug-bridge/: Cargo.toml
crates/slipway-debug-bridge/src/: lib.rs
crates/slipway-debug-mcp/: Cargo.toml
crates/slipway-debug-mcp/src/: lib.rs
crates/slipway-debug-renderer/: Cargo.toml
crates/slipway-debug-renderer/src/: lib.rs
crates/slipway-example-admission/: Cargo.toml  README.md
crates/slipway-example-admission/src/: main.rs
crates/slipway-example-authored/: Cargo.toml
crates/slipway-example-authored/src/: app_runner.rs  communication.rs  internal_logic.rs  main.rs  ssot.rs  tests.rs  view.rs
crates/slipway-runtime/: Cargo.toml
crates/slipway-runtime/src/: lib.rs
crates/slipway/src/: lib.rs
docs/public/: README.md  authoring-layout.md  llm-contract-checklist.md  llm-entry.md  quickstart-authoring.md
docs/public/api/: README.md  backends.md  core.md  debug-mcp.md  diagnostics.md  ime.md  provider-surfaces.md  routing-and-scroll.md  service-mcp.md  trait-surface.md
docs/public/tasks/: README.md  mirror-web-ui.md
