[workspace]
members = [
    "crates/slipway",
    "crates/slipway-core",
    "crates/slipway-backend-egui",
    "crates/slipway-backend-iced",
    "crates/slipway-example-admission",
    "crates/slipway-example-authored",
    "crates/slipway-debug-bridge",
    "crates/slipway-debug-mcp",
    "crates/slipway-debug-renderer",
    "crates/slipway-runtime",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/shim9610/slipway"

# Conservative authoring-mistake lints (roadmap Phase 1, LE-M21). The core
# entry is unused_must_use = deny: declarations, Diagnostics, and
# EventOutcomes carry #[must_use], so a value an author builds and then
# drops (the silent-vanish authoring bug) fails the build instead of
# compiling clean. Members opt in with [lints] workspace = true.
[workspace.lints.rust]
unused_must_use = "deny"
noop_method_call = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"

[profile.dev]
opt-level = 1
