[package]
name = "slipway-backend-iced"
version = "0.1.2"
edition = "2024"
license.workspace = true

[dependencies]
iced = { version = "0.14.0", default-features = false, features = ["advanced", "tokio", "tiny-skia", "wgpu", "canvas"] }
iced_core = { version = "0.14.0", default-features = false }
iced_renderer = { version = "0.14.0", default-features = false, features = ["geometry", "tiny-skia", "wgpu"] }
iced_winit = { version = "0.14.0", default-features = false }
slipway-core = { version = "0.1.2", path = "../slipway-core" }
slipway-debug-bridge = { version = "0.1.2", path = "../slipway-debug-bridge" }
slipway-runtime = { version = "0.1.2", path = "../slipway-runtime" }

[dev-dependencies]
serde_json = "1.0.150"

[lints]
workspace = true
