[package]
name = "slipway-debug-mcp"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
crossbeam-channel = "0.5.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
slipway-core = { version = "0.1.1", path = "../slipway-core" }
slipway-debug-bridge = { version = "0.1.1", path = "../slipway-debug-bridge" }
