[package]
name = "slipway"
version = "0.1.5"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
slipway-backend-egui = { version = "0.1.5", path = "../slipway-backend-egui", optional = true }
slipway-backend-iced = { version = "0.1.5", path = "../slipway-backend-iced", optional = true }
slipway-core = { version = "0.1.5", path = "../slipway-core" }
slipway-debug-bridge = { version = "0.1.5", path = "../slipway-debug-bridge" }
slipway-debug-mcp = { version = "0.1.5", path = "../slipway-debug-mcp" }
slipway-debug-renderer = { version = "0.1.5", path = "../slipway-debug-renderer" }
slipway-runtime = { version = "0.1.5", path = "../slipway-runtime" }

[features]
default = []
iced = ["dep:slipway-backend-iced"]
egui = ["dep:slipway-backend-egui"]
all-backends = ["iced", "egui"]
full = ["all-backends"]

[lints]
workspace = true
